* [access] Fixed selectbox height on iphone.

--- a/netprofile_access/netprofile_access/static/css/login.css
+++ b/netprofile_access/netprofile_access/static/css/login.css
@@ -21,7 +21,6 @@ body
 {
 	position: relative;
 	font-size: 1.15em;
-	height: auto;
 	padding: 10px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -36,12 +35,14 @@ body
 .form-signin input[type="text"]
 {
 	margin-bottom: -1px;
+	height: auto;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 }
 .form-signin input[type="password"]
 {
 	margin-bottom: 0.6em;
+	height: auto;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 }
